# infinity-pedal-ros2

./: CMakeLists.txt  README  package.xml
src/: event.cpp  event.h  fake_pedal.cpp  mplayer.cpp  udev.cpp
